examples/type_system/failing/86_hm_mixed_numeric_typed_mismatch.flx
fn main() -> Unit {
    let x: Int = 1 + 2.5
    x
}
